# free-monads-example

./: Dockerfile  LICENSE  Makefile  README.md  free-monads-example.cabal  free-monads.cabal
app/: Main.hs
src/: Lib.hs
