name:                free-monads-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stilesb/free-monads-example#readme
license:             BSD3
license-file:        LICENSE
author:              Brandon Stiles
maintainer:          me@brandonstil.es
copyright:           2017 Brandon Stiles
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable free-monads-example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , free-monads-example
  default-language:    Haskell2010

test-suite free-monads-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , free-monads-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/free-monads-example
